# Fancy_Functions

./: .gitignore  LICENSE  README.md  experiment_workflow_proposal.ipynb  mock_youtube_analysis_workflow.ipynb  pyproject.toml
docs/: README.md  context.md  introduction.md
docs/dev_notes/: 000-handover.md  cell_definition.md  fancy_function_decorators.md  fancy_function_usage.md  ideal_syntax_of_example_usecase_of_backend.py  ideal_workflow_construction..py  mapping_out_decorators.md  steps.md  strategies_to_serialize_this_workflow.py  workflow_construction_methods.md  workflow_construction_proposal.py
docs/dev_plan/: 000-execution-plan.md  001-plan-cells.md  002-plan-functions.md  003-plan-steps.md  004-plan-workflows.md  005-refactor-plan.md  007-system-design-refactoring-plan.md  008-workflow-builder.md  009-visualization.md  010-workflow-syntax.md  011-decorators.md
docs/example_use_cases/: structuring_and_wholistic_analysis_of_a_youtube_channel
docs/personal_notes/: objective.md
docs/spec/: 000-overview.md  001-fancy-cells.md  002-fancy-functions.md  003-workflow-steps.md  004-workflows.md  005-architecture.md  006-api-design.md  007-refactor.md  007-system-design-refactoring.md  009-workflow_construction_methods.md  010-data-printing-representation.md  cell_to_cell_usage_examples.md
docs/status_update/: 000-dashboard.md  001-plan-cells.md  002-plan-functions.md  003-plan-steps.md  (+1 more)
scripts/: demo_milestone_1.py  guardrails.py
tests/: test_builder.py  test_core_milestone_1.py  test_engine.py  test_example_numbers.py  test_functions.py  test_steps.py
(+12 files in other folders)
