[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fancy_core"
version = "0.1.0"
description = "Logic over Logistics: A library for defining and executing self-describing data workflows."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pandas",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fancy_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
